<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CEP Chat</string>
    <string name="title_section1">List of Friends</string>
    <string name="title_section2">Messages</string>
    <string name="title_section3">Profile</string>
    <string name="title_section4">Post-Its</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="namestr">Name</string>
    <string name="passstr">Password</string>
    <string name="confirmpassstr">Confirm Password</string>
    <string name="emailstr">E-mail</string>
    <string name="newbuttstr">New Button</string>
    <string name="logstr">Login!</string>
    <string name="signup_str">Sign Up!</string>
    <string name="generic_dummy_str">Dummy dummy</string>
    <string name="empty_str">Nothing here!</string>
    <string name="send_new_msg">Send a new message</string>
    <string name="newmsg_str">New Messages</string>
    <string name="oldmsg_str">Old Messages</string>
    <string name="input_msg">Please input your message!</string>
    <string name="nonewfriends_str">Everyone is already your friend!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_content_description">Profile Picture</string>
    <string name="reset_pass_str">Reset Password</string>
    <string name="example_email_str">ayylmao@gmail.com</string>
    <string name="enter_email_str">Enter your email address!</string>
    <string name="input_title">Enter title of message</string>
    <string name="addfrnds_str">Add more friends</string>
    <string name="nofrnd_str">You have no friends! Add some :)</string>
    <string name="sender_str">Sender</string>
    <string name="ttl_str">Title</string>
    <string name="cnt_str">Content</string>
    <string name="status_str">Status</string>
    <string name="newsts_str">New Status</string>
    <string name="login_str">Login to CEP Chat</string>
    <string name="signupbby_str">Sign up bby</string>
    <string name="upload_image_str">Please upload an image</string>
    <string name="send_image_str">Send an Image!</string>
    <string name="profile_text_str">Tap on your status/profile picture to edit it!</string>
    <string name="newpostit_str">New Post-It</string>
    <string name="description_str">Give a short description</string>
    <string name="header_hint_str">Enter a title for your post</string>

</resources>
