<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.swagger.navneeeth99.cepchatter.SignupActivity"
    android:background="@drawable/wallpaper">

    <TextView
        android:text="@string/signupbby_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignupTV"
        android:visibility="invisible"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/newidnameET"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/SignupTV"
        android:layout_centerHorizontal="true"
        android:hint="@string/namestr"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newEmailET"
        android:layout_below="@+id/newidnameET"
        android:layout_alignLeft="@+id/newidnameET"
        android:layout_alignStart="@+id/newidnameET"
        android:hint="@string/emailstr"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newpasswordET"
        android:hint="@string/passstr"
        android:layout_below="@+id/newEmailET"
        android:layout_alignLeft="@+id/newEmailET"
        android:layout_alignStart="@+id/newEmailET"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmpasswordET"
        android:hint="@string/confirmpassstr"
        android:layout_below="@+id/newpasswordET"
        android:layout_alignLeft="@+id/newpasswordET"
        android:layout_alignStart="@+id/newpasswordET"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_str"
        android:id="@+id/signupBT"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:contentDescription="@string/string_content_description"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/addProfPicButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"/>

    <RelativeLayout
        android:id="@+id/signup_progress"
        android:clickable="true"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">
        <!--android:elevation="10dp"-->

        <ProgressBar
            android:indeterminate="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>
