<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.swagger.navneeeth99.cepchatter.LoginActivity"
    android:background="@drawable/wallpaper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_str"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/idnameET"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/namestr"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordET"
        android:layout_below="@+id/idnameET"
        android:layout_alignLeft="@+id/idnameET"
        android:layout_alignStart="@+id/idnameET"
        android:hint="@string/passstr"
        android:textColor="@android:color/white"
        android:textColorHint="#7D7D84"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logstr"
        android:id="@+id/loginBT"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newSignupBT"
        android:layout_below="@+id/loginBT"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_str" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass_str"
        android:id="@+id/resetPasswordButton"
        android:layout_below="@+id/passwordET"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/login_progress"
        android:clickable="true"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ProgressBar
            android:indeterminate="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>
