<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/friendSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:spinnerMode="dropdown"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/newMsgTitleET"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/newMsgET"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_msg"/>

    <ImageButton
        android:contentDescription="@string/upload_image_str"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="20dp"
        android:id="@+id/sendNewImageButton"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>