<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swagger.navneeeth99.cepchatter.ProfileFragment">


    <ImageView
        android:contentDescription="@string/string_content_description"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profPicIV"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/namestr"
        android:id="@+id/profNameTV"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/profPicIV"
        android:layout_toEndOf="@+id/profPicIV"
        android:layout_alignBottom="@+id/profPicIV"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="25sp"
        android:text="@string/status_str"
        android:id="@+id/profStatusTV"
        android:gravity="center"
        android:layout_below="@+id/profPicIV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>