<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swagger.navneeeth99.cepchatter.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="@string/string_content_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/changeProfPicButton"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="@string/namestr"
                android:id="@+id/profileUsernameTV"
                android:gravity="center"
                android:textColor="#ffff082a" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="25sp"
                android:text="@string/status_str"
                android:id="@+id/profileStatusTV"
                android:gravity="center"
                android:textColor="#ffffffff" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_text_str"
        android:textColor="#7D7D84"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />

    <RelativeLayout
        android:id="@+id/profile_progress"
        android:clickable="true"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">

        <ProgressBar
            android:indeterminate="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />



    </RelativeLayout>

</RelativeLayout>
