<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/newmsg_str"
        android:textAllCaps="true"
        android:id="@+id/incomingTitleTV"
        android:padding="10dp"
        android:textColor="#FF38B1"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/incomingLV"
            android:divider="#3C3176"
            />

        <ProgressBar
            android:id="@+id/inbox_progress"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/inboxEmptyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_str"
            android:visibility="invisible"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:padding="20dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/oldmsg_str"
        android:textAllCaps="true"
        android:id="@+id/readTitleTV"
        android:padding="10dp"
        android:textColor="#920D5E"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/readLV"
            android:divider="#3C3176"
            />

        <ProgressBar
            android:id="@+id/readbox_progress"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/readEmptyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_str"
            android:textAllCaps="true"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:padding="20dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/sendMessageBT"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_new_msg"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_style"/>


</LinearLayout>